[Frontend] feat: DeleteUsers and PutUsers Implemented

--- a/frontend/src/app/_components/user/user-list/user-list.component.html
+++ b/frontend/src/app/_components/user/user-list/user-list.component.html
@@ -29,14 +29,15 @@
                     <button
                         type="button"
                         class="btn btn-outline-secondary"
-                        routerLink=""
+                        routerLink="/users/{{ user.id }}"
                     >
                         Editar
                     </button>
                     <button
                         type="button"
+                        (click)="deleteUser(user.id)"
                         class="btn btn-outline-secondary"
-                        routerLink=""
+                        
                     >
                         Eliminar
                     </button>
