--- a/frontend/src/app/_components/user/user-list/user-list.component.html
+++ b/frontend/src/app/_components/user/user-list/user-list.component.html
@@ -2,8 +2,8 @@
 
 <div class="row justify-content-center">
     <form class="d-flex">
-        <input id="search-user" class="form-control me-sm-2" type="search" placeholder="Search">
-        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
+        <input id="search-user" class="form-control me-sm-2" type="text" placeholder="Search" (input)="filterResults($event)" #filter>
+        
       </form>
     <div class="col-10"> 
         <table class="table table-hover table-responsive-xxl">
@@ -18,7 +18,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let user of users">
+        <tr *ngFor="let user of filteredUserList">
             <td>{{ user['rut'] | titlecase }}</td> 
             <td>{{ user['name'] | titlecase }}</td>
             <td>{{ user['lastName'] | titlecase }}</td>
