[Frontend] feat: Modal delete and html home

--- a/frontend/src/app/_components/home/home.component.html
+++ b/frontend/src/app/_components/home/home.component.html
@@ -1,7 +1,4 @@
-<p>home works!</p>
-<h2>Example body text</h2>
-<p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-<p><small>This line of text is meant to be treated as fine print.</small></p>
-<p>The following is <strong>rendered as bold text</strong>.</p>
-<p>The following is <em>rendered as italicized text</em>.</p>
-<p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+
+<h2>¡Bienvenido a Dumbo Supermercados Ltda.!</h2>
+<br>
+<h5>En este nuevo sistema, encontrarás funciones intuitivas y potentes que simplificarán tareas como la búsqueda, creación, edición y eliminación de usuarios. La colaboración entre la experiencia consolidada de Dumbo Supermercados Ltda. y la creatividad de los estudiantes asegura una plataforma que cumple con los más altos estándares de usabilidad y funcionalidad.</h5>
