[Frontend] feat: Login and Logout with token

--- a/frontend/src/app/_components/login/login.component.html
+++ b/frontend/src/app/_components/login/login.component.html
@@ -5,7 +5,7 @@
               <legend>Iniciar sesión</legend>
               <div class="form-group">
                 <label for="UserAccount" class="form-label mt-4">Usuario</label>
-                <input [formControl]="$any(loginForm.controls['account'])" type="text" class="form-control" id="UserAccount" placeholder="Ingrese usuario">
+                <input [formControl]="$any(loginForm.controls['username'])" type="text" class="form-control" id="UserAccount" placeholder="Ingrese usuario">
               </div>
               <div class="form-group">
                 <label for="InputPassword" class="form-label mt-4">Contraseña</label>
