--- a/frontend/src/app/_components/nav/nav.component.html
+++ b/frontend/src/app/_components/nav/nav.component.html
@@ -17,7 +17,7 @@
           </li>
         </ul>
         <form class="d-flex">
-          <button class="btn btn-secondary my-2 my-sm-0" [routerLink]="['/login']" >Salir</button>
+          <button class="btn btn-secondary my-2 my-sm-0" (click)="logout()" >Salir</button>
         </form>
       </div>
     </div>
