--- a/frontend/src/app/_components/nav/nav.component.html
+++ b/frontend/src/app/_components/nav/nav.component.html
@@ -1,24 +1,26 @@
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" >Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['/home']">Home</a>
-          </li>
-          <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['/users/list']">Visualizar Usuarios</a>
-          </li>
-          <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['/users/create']">Crear Usuarios</a>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <button class="btn btn-secondary my-2 my-sm-0" (click)="logout()" >Salir</button>
-        </form>
+<ng-container *ngIf="accountService.currentAccount$ | async as currentAccount">
+  <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" >Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarColor01">
+          <ul class="navbar-nav me-auto">
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" [routerLink]="['/home']">Home</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" [routerLink]="['/users/list']">Visualizar Usuarios</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+              <a class="nav-link" [routerLink]="['/users/create']">Crear Usuarios</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <button class="btn btn-secondary my-2 my-sm-0" (click)="logout()" >Salir</button>
+          </form>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+</ng-container>
